cleanup - use List.of